name:                genvalidity
version:             0.2.0.4
synopsis:            Testing utilities for the validity library
description:
  Note: There are companion instance packages for this library:
  .
  * <https://hackage.haskell.org/package/genvalidity-text genvalidity-text>
  .
  * <https://hackage.haskell.org/package/genvalidity-containers genvalidity-containers>

homepage:            https://github.com/NorfairKing/validity#readme
license:             MIT
license-file:        LICENSE
author:              Tom Sydney Kerckhove
maintainer:          syd.kerckhove@gmail.com
copyright:           Copyright: (c) 2016 Tom Sydney Kerckhove
category:            Testing
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.GenValidity
                     , Data.GenRelativeValidity
  build-depends:       base               < 5
                     , validity           >= 0.3 && < 0.4
                     , QuickCheck         >= 2.8 && < 2.10
  default-language:    Haskell2010

test-suite genvalidity-test
  type:
    exitcode-stdio-1.0
  default-language:
    Haskell2010
  hs-source-dirs:
    test
  main-is:
    Spec.hs
  other-modules:
    Data.GenValiditySpec
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
    -Wall
    -fno-warn-name-shadowing
  build-depends:
      base

    , hspec
    , QuickCheck     >= 2.8 && < 2.9

    , genvalidity

source-repository head
  type:     git
  location: https://github.com/NorfairKing/validity
