name: genvalidity
version: 0.4.0.2
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
copyright: Copyright: (c) 2016 Tom Sydney Kerckhove
maintainer: syd.kerckhove@gmail.com
homepage: https://github.com/NorfairKing/validity#readme
synopsis: Testing utilities for the validity library
description:
    Note: There are companion instance packages for this library:
    .
    * <https://hackage.haskell.org/package/genvalidity-aeson genvalidity-aeson>
    .
    * <https://hackage.haskell.org/package/genvalidity-bytestring genvalidity-bytestring>
    .
    * <https://hackage.haskell.org/package/genvalidity-containers genvalidity-containers>
    .
    * <https://hackage.haskell.org/package/genvalidity-path genvalidity-path>
    .
    * <https://hackage.haskell.org/package/genvalidity-scientific genvalidity-scientific>
    .
    * <https://hackage.haskell.org/package/genvalidity-text genvalidity-text>
    .
    * <https://hackage.haskell.org/package/genvalidity-time genvalidity-time>
    .
    * <https://hackage.haskell.org/package/genvalidity-unordered-containers genvalidity-unordered-containers>
    .
    * <https://hackage.haskell.org/package/genvalidity-uuid genvalidity-uuid>
    .
    * <https://hackage.haskell.org/package/genvalidity-vector genvalidity-vector>
    .
category: Testing
author: Tom Sydney Kerckhove

source-repository head
    type: git
    location: https://github.com/NorfairKing/validity

library
    
    if impl(ghc >=8.0.0)
        ghc-options: -Wno-redundant-constraints
    exposed-modules:
        Data.GenValidity
        Data.GenRelativeValidity
    build-depends:
        base >=4.7 && <5,
        validity >=0.4.0.2 && <0.5,
        QuickCheck >=2.7 && <2.11
    default-language: Haskell2010
    hs-source-dirs: src

test-suite genvalidity-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base -any,
        hspec -any,
        QuickCheck -any,
        genvalidity -any
    default-language: Haskell2010
    hs-source-dirs: test
    other-modules:
        Data.GenValiditySpec
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-name-shadowing
