name:                validity-containers
version:             0.1.0.2
synopsis:            Validity instances for containers
description:         Please see README.md
homepage:            https://github.com/NorfairKing/validity#readme
license:             MIT
license-file:        LICENSE
author:              Tom Sydney Kerckhove
maintainer:          syd.kerckhove@gmail.com
copyright:           Copyright: (c) 2016 Tom Sydney Kerckhove
category:            Validity
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Validity.Containers
                     , Data.Validity.Tree
                     , Data.Validity.Map
                     , Data.Validity.Sequence
                     , Data.Validity.Set
  build-depends:       base < 5
                     , validity >= 0.3 && < 0.4
                     , containers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/NorfairKing/validity
