name:                validity
version:             0.3.0.2
synopsis:            Validity typeclass
description:        
  Note: There are companion instance packages for this library:
  .
  * <https://hackage.haskell.org/package/validity-text validity-text>
  .                                                 
  * <https://hackage.haskell.org/package/validity-containers validity-containers>

homepage:            https://github.com/NorfairKing/validity#readme
license:             MIT
license-file:        LICENSE
author:              Tom Sydney Kerckhove
maintainer:          syd.kerckhove@gmail.com
copyright:           Copyright: (c) 2016 Tom Sydney Kerckhove
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Validity
                     , Data.RelativeValidity
  build-depends:       base >= 4 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/NorfairKing/validity
