name: validity
version: 0.4.0.2
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
copyright: Copyright: (c) 2016 Tom Sydney Kerckhove
maintainer: syd.kerckhove@gmail.com
homepage: https://github.com/NorfairKing/validity#readme
synopsis: Validity typeclass
description:
    For more info, see <https://github.com/NorfairKing/validity the readme>.
    .
    Note: There are companion instance packages for this library:
    .
    * <https://hackage.haskell.org/package/validity-aeson validity-aeson>
    .
    * <https://hackage.haskell.org/package/validity-bytestring validity-bytestring>
    .
    * <https://hackage.haskell.org/package/validity-containers validity-containers>
    .
    * <https://hackage.haskell.org/package/validity-path validity-path>
    .
    * <https://hackage.haskell.org/package/validity-scientific validity-scientific>
    .
    * <https://hackage.haskell.org/package/validity-text validity-text>
    .
    * <https://hackage.haskell.org/package/validity-time validity-time>
    .
    * <https://hackage.haskell.org/package/validity-unordered-containers validity-unordered-containers>
    .
    * <https://hackage.haskell.org/package/validity-uuid validity-uuid>
    .
    * <https://hackage.haskell.org/package/validity-vector validity-vector>
    .
category: Validity
author: Tom Sydney Kerckhove

source-repository head
    type: git
    location: https://github.com/NorfairKing/validity

library
    
    if impl(ghc >=8.0.0)
        ghc-options: -Wno-redundant-constraints
    exposed-modules:
        Data.RelativeValidity
        Data.Validity
    build-depends:
        base >=4.7 && <5
    default-language: Haskell2010
    hs-source-dirs: src

